fixed text alignment in 'Won game' pop-up

--- a/sudoku-app/src/styles.scss
+++ b/sudoku-app/src/styles.scss
@@ -30,6 +30,7 @@ ion-alert {
         .alert-message.sc-ion-alert-md {
             font-size: max(1.25rem, 3.75vw);
             max-width: 70vw;
+            margin: auto;
         }
 
         .alert-title,
